# universal-hw

./: .gitmodules  CMakeLists.txt  README.md  register-file-organization.txt
cmake/: Config.cmake
examples/playground/: skeleton.cpp
hw/: adder_tb.vhdl  adder_tb.vhdl.bak  posit-qa.cr.mti  posit-qa.mpf  vnv_results
hw/vhdl/: add_tb.vhdl  addition_posit_5_0.vnv  addition_posit_5_1.vnv  addition_posit_5_2.vnv  clock_generator.vhdl  dut.vhdl  full_adder.vhdl  hello_world.vhdl  test.vcd  test_entity.vhdl  test_entity_cfgs.vhdl  test_entity_tb.vhdl  test_vector.vhdl  test_vector_reader.vhdl  transcript  work-obj93.cf
hw/vhdl/unit/: pf_add.vhdl  pf_components.vhdl  pf_functions.vhdl  pf_tb.vhdl
hw/work/: _info  _lib.qdb  _lib1_4.qdb  _lib1_4.qpg  _lib1_4.qtl  _lib1_5.qdb  _lib1_5.qpg  _lib1_5.qtl
posit_to_fp_conversion/: README.md
posit_to_fp_conversion/Testbench/: full_design_tb.v  full_design_tb_behav.wcfg
posit_to_fp_conversion/srcs/: Posit_to_FP.v  data_extract.v  lod_master.v  lod_sub.v  lzd_master.v  lzd_sub.v  regfile.v  register_reader_interface_module.v  top_level_integration.v
qa/: posit_test_helpers.hpp
qa/exhaustive/posit/: CMakeLists.txt  add.cpp  common.hpp  divide.cpp  multiply.cpp  subtract.cpp  tables.cpp  to_ssf.cpp
qa/smoke/posit/: CMakeLists.txt  common.hpp  qa_helpers.hpp  smoke_add.cpp  smoke_conversion.cpp  smoke_detail.cpp  smoke_div.cpp  smoke_mul.cpp  smoke_randoms.cpp  smoke_sub.cpp
qa/smoke/valid/: CMakeLists.txt  qa_helpers.hpp  smoke_add.cpp
tests/: posit_test_helpers.hpp
tests/posit/: 128bit_posit.cpp  48bit_posit.cpp  64bit_posit.cpp  CMakeLists.txt  README.md
tests/quire/: README.md
tests/valid/: README.md
tools/cmd/: common.hpp  dc.cpp  fc.cpp  ieee_fp.cpp  ldc.cpp  numeric_limits.cpp  pc.cpp  scales.cpp  tables.cpp
